fixed addShift